updated solar to include all regions, not just northwest

--- a/notebooks/fetch_and_clean_solar_data.ipynb
+++ b/notebooks/fetch_and_clean_solar_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "975762d8-59c0-487f-b58d-4b290dd29808",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "684c3d3c-eece-401a-9039-e0dfde09f111",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "507410a8-2180-49a2-b10d-3034927f2daa",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(21958, 5)\n"
+      "(21958, 26)\n"
      ]
     },
     {
@@ -62,10 +62,26 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>interval_start_local</th>\n",
+       "      <th>pvgrpp_system_wide</th>\n",
+       "      <th>stppf_system_wide</th>\n",
+       "      <th>cop_hsl_system_wide</th>\n",
+       "      <th>gen_system_wide</th>\n",
+       "      <th>pvgrpp_centerwest</th>\n",
+       "      <th>stppf_centerwest</th>\n",
+       "      <th>cop_hsl_centerwest</th>\n",
+       "      <th>gen_centerwest</th>\n",
        "      <th>pvgrpp_northwest</th>\n",
-       "      <th>stppf_northwest</th>\n",
-       "      <th>cop_hsl_northwest</th>\n",
-       "      <th>gen_northwest</th>\n",
+       "      <th>...</th>\n",
+       "      <th>gen_fareast</th>\n",
+       "      <th>pvgrpp_southeast</th>\n",
+       "      <th>stppf_southeast</th>\n",
+       "      <th>cop_hsl_southeast</th>\n",
+       "      <th>gen_southeast</th>\n",
+       "      <th>pvgrpp_centereast</th>\n",
+       "      <th>stppf_centereast</th>\n",
+       "      <th>cop_hsl_centereast</th>\n",
+       "      <th>gen_centereast</th>\n",
+       "      <th>hsl_system_wide</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -75,7 +91,23 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.10</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -83,7 +115,23 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.10</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -91,7 +139,23 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.10</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -99,7 +163,23 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.11</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -107,95 +187,152 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.10</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       interval_start_local  pvgrpp_northwest  stppf_northwest  \\\n",
-       "0 2022-06-30 00:00:00-05:00               0.0              0.0   \n",
-       "1 2022-06-30 01:00:00-05:00               0.0              0.0   \n",
-       "2 2022-06-30 02:00:00-05:00               0.0              0.0   \n",
-       "3 2022-06-30 03:00:00-05:00               0.0              0.0   \n",
-       "4 2022-06-30 04:00:00-05:00               0.0              0.0   \n",
+       "       interval_start_local  pvgrpp_system_wide  stppf_system_wide  \\\n",
+       "0 2022-06-30 00:00:00-05:00                 0.0                0.0   \n",
+       "1 2022-06-30 01:00:00-05:00                 0.0                0.0   \n",
+       "2 2022-06-30 02:00:00-05:00                 0.0                0.0   \n",
+       "3 2022-06-30 03:00:00-05:00                 0.0                0.0   \n",
+       "4 2022-06-30 04:00:00-05:00                 0.0                0.0   \n",
        "\n",
-       "   cop_hsl_northwest  gen_northwest  \n",
-       "0                0.0            0.0  \n",
-       "1                0.0            0.0  \n",
-       "2                0.0            0.0  \n",
-       "3                0.0            0.0  \n",
-       "4                0.0            0.0  "
+       "   cop_hsl_system_wide  gen_system_wide  pvgrpp_centerwest  stppf_centerwest  \\\n",
+       "0                  0.0             0.10                0.0               0.0   \n",
+       "1                  0.0             0.10                0.0               0.0   \n",
+       "2                  0.0             0.10                0.0               0.0   \n",
+       "3                  0.0             0.11                0.0               0.0   \n",
+       "4                  0.0             0.10                0.0               0.0   \n",
+       "\n",
+       "   cop_hsl_centerwest  gen_centerwest  pvgrpp_northwest  ...  gen_fareast  \\\n",
+       "0                 0.0             0.0               0.0  ...          0.1   \n",
+       "1                 0.0             0.0               0.0  ...          0.1   \n",
+       "2                 0.0             0.0               0.0  ...          0.1   \n",
+       "3                 0.0             0.0               0.0  ...          0.1   \n",
+       "4                 0.0             0.0               0.0  ...          0.1   \n",
+       "\n",
+       "   pvgrpp_southeast  stppf_southeast  cop_hsl_southeast  gen_southeast  \\\n",
+       "0               0.0              0.0                0.0            0.0   \n",
+       "1               0.0              0.0                0.0            0.0   \n",
+       "2               0.0              0.0                0.0            0.0   \n",
+       "3               0.0              0.0                0.0            0.0   \n",
+       "4               0.0              0.0                0.0            0.0   \n",
+       "\n",
+       "   pvgrpp_centereast  stppf_centereast  cop_hsl_centereast  gen_centereast  \\\n",
+       "0                0.0               0.0                 0.0             0.0   \n",
+       "1                0.0               0.0                 0.0             0.0   \n",
+       "2                0.0               0.0                 0.0             0.0   \n",
+       "3                0.0               0.0                 0.0             0.0   \n",
+       "4                0.0               0.0                 0.0             0.0   \n",
+       "\n",
+       "   hsl_system_wide  \n",
+       "0              NaN  \n",
+       "1              NaN  \n",
+       "2              NaN  \n",
+       "3              NaN  \n",
+       "4              NaN  \n",
+       "\n",
+       "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Base URL from GridStatus (without query params)\n",
+    "# Base URL\n",
     "url = \"https://api.gridstatus.io/v1/datasets/ercot_solar_actual_and_forecast_by_geo_region_hourly/query\"\n",
     "\n",
-    "# Use full available history up to end of 2024\n",
+    "# Query parameters\n",
     "params = {\n",
-    "    \"start_time\": \"2022-06-30\",   # earliest available for this dataset\n",
-    "    \"end_time\":   \"2024-12-31\",   # stop at end of 2024\n",
+    "    \"start_time\": \"2022-06-30\",\n",
+    "    \"end_time\":   \"2024-12-31\",\n",
     "    \"publish_time\": \"latest\",\n",
     "    \"timezone\": \"market\",\n",
     "    \"api_key\": api_key,\n",
     "    \"return_format\": \"csv\",\n",
     "}\n",
     "\n",
-    "# Make the request\n",
+    "# Make request\n",
     "resp = requests.get(url, params=params)\n",
     "resp.raise_for_status()\n",
     "\n",
     "df = pd.read_csv(StringIO(resp.text))\n",
     "\n",
-    "# --- Handle datetimes properly (tz-aware) ---\n",
+    "# timezone workaround to avoid error of timezones not matching\n",
     "\n",
-    "# Parse as UTC to avoid the mixed-tz warning\n",
+    "# 1. Parse timestamps as UTC (prevents mixed offset errors)\n",
     "df[\"interval_start_local\"] = pd.to_datetime(df[\"interval_start_local\"], utc=True)\n",
     "\n",
-    "# Apply cutoff with a proper Timestamp (same tz)\n",
+    "# 2. Apply cutoff (also tz-aware)\n",
     "cutoff_utc = pd.Timestamp(\"2024-12-31 23:59:59\", tz=\"UTC\")\n",
     "df = df[df[\"interval_start_local\"] <= cutoff_utc].copy()\n",
     "\n",
-    "# If you want to see times in ERCOT local time (America/Chicago):\n",
+    "# 3. Convert UTC → ERCOT local time\n",
     "df[\"interval_start_local\"] = df[\"interval_start_local\"].dt.tz_convert(\"America/Chicago\")\n",
     "\n",
-    "# --- Keep only the columns you care about ---\n",
+    "# include systemwide + all regions\n",
     "\n",
-    "solar_cols = [\n",
-    "    \"interval_start_local\",\n",
-    "    \"pvgrpp_northwest\",      # main solar forecast\n",
-    "    \"stppf_northwest\",       # short-term solar forecast\n",
-    "    \"cop_hsl_northwest\",     # high solar limit\n",
-    "    \"gen_northwest\",         # actual solar generation\n",
-    "]\n",
+    "regions = [\"system_wide\", \"centerwest\", \"northwest\", \"fareast\", \"southeast\", \"centereast\"]\n",
     "\n",
-    "df_solar_nw = (\n",
+    "solar_cols = [\"interval_start_local\"]\n",
+    "\n",
+    "for r in regions:\n",
+    "    solar_cols += [\n",
+    "        f\"pvgrpp_{r}\",\n",
+    "        f\"stppf_{r}\",\n",
+    "        f\"cop_hsl_{r}\",\n",
+    "        f\"gen_{r}\",\n",
+    "    ]\n",
+    "\n",
+    "# Some systemwide datasets include an extra \"hsl_system_wide\"\n",
+    "if \"hsl_system_wide\" in df.columns:\n",
+    "    solar_cols.append(\"hsl_system_wide\")\n",
+    "\n",
+    "df_solar_all = (\n",
     "    df[solar_cols]\n",
     "    .sort_values(\"interval_start_local\")\n",
     "    .reset_index(drop=True)\n",
     ")\n",
     "\n",
-    "print(df_solar_nw.shape)\n",
-    "df_solar_nw.head()\n"
+    "print(df_solar_all.shape)\n",
+    "df_solar_all.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "8e44c3a2-15c8-4a16-a136-62a5b4d45523",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save csv to folder\n",
-    "df_solar_nw.to_csv(r\"C:\\Users\\lemre\\Documents\\ERCOT_Peaker_Project\\ercot_solar_northwest_2022_2024.csv\", \n",
-    "                   index=False)"
+    "df_solar_all.to_csv(\n",
+    "    r\"C:\\Users\\lemre\\Documents\\ERCOT_Peaker_Project\\ercot_solar_allzones_2022_2024.csv\",\n",
+    "    index=False\n",
+    ")"
    ]
   },
   {
