resampling to hourlies

--- a/src/get_actuals.ipynb
+++ b/src/get_actuals.ipynb
@@ -10,24 +10,62 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-23 13:32:02 - INFO - Fetching Page 1...\n",
-      "2025-11-23 13:32:02 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load/query\n",
-      "2025-11-23 13:32:02 - INFO - Params: {'start_time': Timestamp('2021-01-01 00:00:00'), 'end_time': Timestamp('2021-01-07 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 1, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': '', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n"
+      "2025-11-23 13:33:42 - INFO - Fetching Page 1...\n",
+      "2025-11-23 13:33:42 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load/query\n",
+      "2025-11-23 13:33:42 - INFO - Params: {'start_time': Timestamp('2021-01-01 00:00:00'), 'end_time': Timestamp('2024-12-31 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 1, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': '', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n",
+      "2025-11-23 13:33:45 - INFO - Done in 2.78 seconds. \n",
+      "2025-11-23 13:33:45 - INFO - Fetching Page 2...\n",
+      "2025-11-23 13:33:45 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load/query\n",
+      "2025-11-23 13:33:45 - INFO - Params: {'start_time': Timestamp('2021-01-01 00:00:00'), 'end_time': Timestamp('2024-12-31 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 2, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': 'eyJjb2x1bW5zIjogWyJpbnRlcnZhbF9zdGFydF91dGMiXSwgInZhbHVlcyI6IFsiMjAyMS0wNi0yMyAyMDozNTowMCswMDowMCJdLCAidG90YWxfcm93c19yZXR1cm5lZF9zb19mYXIiOiA1MDAwMH0=', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n",
+      "2025-11-23 13:33:47 - INFO - Done in 2.54 seconds. Total time: 5.32s. Avg per page: 2.66s\n",
+      "2025-11-23 13:33:47 - INFO - Fetching Page 3...\n",
+      "2025-11-23 13:33:47 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load/query\n",
+      "2025-11-23 13:33:47 - INFO - Params: {'start_time': Timestamp('2021-01-01 00:00:00'), 'end_time': Timestamp('2024-12-31 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 3, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': 'eyJjb2x1bW5zIjogWyJpbnRlcnZhbF9zdGFydF91dGMiXSwgInZhbHVlcyI6IFsiMjAyMS0xMi0xNCAxMToxNTowMCswMDowMCJdLCAidG90YWxfcm93c19yZXR1cm5lZF9zb19mYXIiOiAxMDAwMDB9', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n",
+      "2025-11-23 13:33:50 - INFO - Done in 2.58 seconds. Total time: 7.9s. Avg per page: 2.63s\n",
+      "2025-11-23 13:33:50 - INFO - Fetching Page 4...\n",
+      "2025-11-23 13:33:50 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load/query\n",
+      "2025-11-23 13:33:50 - INFO - Params: {'start_time': Timestamp('2021-01-01 00:00:00'), 'end_time': Timestamp('2024-12-31 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 4, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': 'eyJjb2x1bW5zIjogWyJpbnRlcnZhbF9zdGFydF91dGMiXSwgInZhbHVlcyI6IFsiMjAyMi0wNi0wNiAwMTo1NTowMCswMDowMCJdLCAidG90YWxfcm93c19yZXR1cm5lZF9zb19mYXIiOiAxNTAwMDB9', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n",
+      "2025-11-23 13:33:52 - INFO - Done in 2.57 seconds. Total time: 10.46s. Avg per page: 2.62s\n",
+      "2025-11-23 13:33:52 - INFO - Fetching Page 5...\n",
+      "2025-11-23 13:33:52 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load/query\n",
+      "2025-11-23 13:33:52 - INFO - Params: {'start_time': Timestamp('2021-01-01 00:00:00'), 'end_time': Timestamp('2024-12-31 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 5, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': 'eyJjb2x1bW5zIjogWyJpbnRlcnZhbF9zdGFydF91dGMiXSwgInZhbHVlcyI6IFsiMjAyMi0xMS0yNiAxNjozNTowMCswMDowMCJdLCAidG90YWxfcm93c19yZXR1cm5lZF9zb19mYXIiOiAyMDAwMDB9', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n",
+      "2025-11-23 13:33:55 - INFO - Done in 2.64 seconds. Total time: 13.1s. Avg per page: 2.62s\n",
+      "2025-11-23 13:33:55 - INFO - Fetching Page 6...\n",
+      "2025-11-23 13:33:55 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load/query\n",
+      "2025-11-23 13:33:55 - INFO - Params: {'start_time': Timestamp('2021-01-01 00:00:00'), 'end_time': Timestamp('2024-12-31 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 6, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': 'eyJjb2x1bW5zIjogWyJpbnRlcnZhbF9zdGFydF91dGMiXSwgInZhbHVlcyI6IFsiMjAyMy0wNS0xOSAwNzoxNTowMCswMDowMCJdLCAidG90YWxfcm93c19yZXR1cm5lZF9zb19mYXIiOiAyNTAwMDB9', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n",
+      "2025-11-23 13:33:58 - INFO - Done in 2.87 seconds. Total time: 15.97s. Avg per page: 2.66s\n",
+      "2025-11-23 13:33:58 - INFO - Fetching Page 7...\n",
+      "2025-11-23 13:33:58 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load/query\n",
+      "2025-11-23 13:33:58 - INFO - Params: {'start_time': Timestamp('2021-01-01 00:00:00'), 'end_time': Timestamp('2024-12-31 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 7, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': 'eyJjb2x1bW5zIjogWyJpbnRlcnZhbF9zdGFydF91dGMiXSwgInZhbHVlcyI6IFsiMjAyMy0xMS0wOSAwNjozMDowMCswMDowMCJdLCAidG90YWxfcm93c19yZXR1cm5lZF9zb19mYXIiOiAzMDAwMDB9', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n",
+      "2025-11-23 13:34:00 - INFO - Done in 2.58 seconds. Total time: 18.55s. Avg per page: 2.65s\n",
+      "2025-11-23 13:34:00 - INFO - Fetching Page 8...\n",
+      "2025-11-23 13:34:00 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load/query\n",
+      "2025-11-23 13:34:00 - INFO - Params: {'start_time': Timestamp('2021-01-01 00:00:00'), 'end_time': Timestamp('2024-12-31 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 8, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': 'eyJjb2x1bW5zIjogWyJpbnRlcnZhbF9zdGFydF91dGMiXSwgInZhbHVlcyI6IFsiMjAyNC0wNS0wMSAwMDo1NTowMCswMDowMCJdLCAidG90YWxfcm93c19yZXR1cm5lZF9zb19mYXIiOiAzNTAwMDB9', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n",
+      "2025-11-23 13:34:03 - INFO - Done in 2.52 seconds. Total time: 21.07s. Avg per page: 2.63s\n",
+      "2025-11-23 13:34:03 - INFO - Fetching Page 9...\n",
+      "2025-11-23 13:34:03 - INFO - GET https://api.gridstatus.io/v1/datasets/ercot_load/query\n",
+      "2025-11-23 13:34:03 - INFO - Params: {'start_time': Timestamp('2021-01-01 00:00:00'), 'end_time': Timestamp('2024-12-31 00:00:00'), 'publish_time_start': None, 'publish_time_end': None, 'limit': None, 'page': 9, 'page_size': None, 'resample_frequency': None, 'resample_by': None, 'resample_function': None, 'publish_time': None, 'timezone': 'market', 'cursor': 'eyJjb2x1bW5zIjogWyJpbnRlcnZhbF9zdGFydF91dGMiXSwgInZhbHVlcyI6IFsiMjAyNC0xMC0yMSAxODozMDowMCswMDowMCJdLCAidG90YWxfcm93c19yZXR1cm5lZF9zb19mYXIiOiA0MDAwMDB9', 'filter_column': None, 'filter_value': None, 'filter_operator': '=', 'return_format': 'json', 'json_schema': 'array-of-arrays'}\n",
+      "2025-11-23 13:34:04 - INFO - Done in 1.37 seconds. Total time: 22.44s. Avg per page: 2.49s\n",
+      "2025-11-23 13:34:04 - INFO - Total number of rows: 420283\n"
      ]
     },
     {
-     "ename": "Exception",
-     "evalue": "Error 403: {\"detail\":\"Rows exported limit reached.  Usage: 1,600,372, Limit: 1,000,000. Please visit your account settings or contact us to upgrade.\"}",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mException\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 41\u001b[39m\n\u001b[32m     31\u001b[39m     df = client.get_dataset(\n\u001b[32m     32\u001b[39m     dataset=\u001b[33m\"\u001b[39m\u001b[33mercot_net_load\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     33\u001b[39m     start=\u001b[33m\"\u001b[39m\u001b[33m2021-1-1\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     34\u001b[39m     end=\u001b[33m\"\u001b[39m\u001b[33m2022-12-31\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     35\u001b[39m     timezone=\u001b[33m\"\u001b[39m\u001b[33mmarket\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     36\u001b[39m     )\n\u001b[32m     38\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n\u001b[32m---> \u001b[39m\u001b[32m41\u001b[39m load_actuals_df = \u001b[43mget_load_actuals\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclient\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     42\u001b[39m \u001b[38;5;28mprint\u001b[39m(load_actuals_df.head())\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 20\u001b[39m, in \u001b[36mget_load_actuals\u001b[39m\u001b[34m(client)\u001b[39m\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_load_actuals\u001b[39m(client):\n\u001b[32m     19\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Get ERCOT load actuals for a specific date range.\"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m     df = \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_dataset\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mercot_load\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     22\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstart\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m2021-1-1\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     23\u001b[39m \u001b[43m    \u001b[49m\u001b[43mend\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m2021-1-7\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     24\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtimezone\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmarket\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     25\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     27\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/ERCOT_Peaker_Project/.venv/lib/python3.11/site-packages/gridstatusio/gs_client.py:468\u001b[39m, in \u001b[36mGridStatusClient.get_dataset\u001b[39m\u001b[34m(self, dataset, start, end, publish_time_start, publish_time_end, columns, filter_column, filter_value, filter_operator, publish_time, resample, resample_by, resample_function, limit, page_size, tz, timezone, verbose, use_cursor_pagination, sleep_time)\u001b[39m\n\u001b[32m    464\u001b[39m     params[\u001b[33m\"\u001b[39m\u001b[33mcolumns\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[33m\"\u001b[39m\u001b[33m,\u001b[39m\u001b[33m\"\u001b[39m.join(columns)\n\u001b[32m    466\u001b[39m logger.info(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFetching Page \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpage\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m468\u001b[39m df, meta, dataset_metadata = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m=\u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    469\u001b[39m has_next_page = (\n\u001b[32m    470\u001b[39m     meta.get(\u001b[33m\"\u001b[39m\u001b[33mhasNextPage\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;28;01mif\u001b[39;00m meta \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m    471\u001b[39m )\n\u001b[32m    472\u001b[39m \u001b[38;5;66;03m# Extract the cursor to send in the next request for cursor pagination\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/ERCOT_Peaker_Project/.venv/lib/python3.11/site-packages/gridstatusio/gs_client.py:180\u001b[39m, in \u001b[36mGridStatusClient.get\u001b[39m\u001b[34m(self, url, params, verbose, return_raw_response_json)\u001b[39m\n\u001b[32m    177\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.request_format == \u001b[33m\"\u001b[39m\u001b[33mjson\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m    178\u001b[39m         params[\u001b[33m\"\u001b[39m\u001b[33mjson_schema\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[33m\"\u001b[39m\u001b[33marray-of-arrays\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m180\u001b[39m response = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_with_retry\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheaders\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    182\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m return_raw_response_json:\n\u001b[32m    183\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m response.json()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/ERCOT_Peaker_Project/.venv/lib/python3.11/site-packages/gridstatusio/gs_client.py:137\u001b[39m, in \u001b[36mGridStatusClient._get_with_retry\u001b[39m\u001b[34m(self, url, params, headers, verbose)\u001b[39m\n\u001b[32m    135\u001b[39m         retries += \u001b[32m1\u001b[39m\n\u001b[32m    136\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m137\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mError \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse.status_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresponse.text\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    139\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m RETRIABLE_EXCEPTIONS \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    140\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m retries >= \u001b[38;5;28mself\u001b[39m.max_retries:\n",
-      "\u001b[31mException\u001b[39m: Error 403: {\"detail\":\"Rows exported limit reached.  Usage: 1,600,372, Limit: 1,000,000. Please visit your account settings or contact us to upgrade.\"}"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       interval_start_local        interval_start_utc  \\\n",
+      "0 2021-01-01 00:00:00-06:00 2021-01-01 06:00:00+00:00   \n",
+      "1 2021-01-01 00:05:00-06:00 2021-01-01 06:05:00+00:00   \n",
+      "2 2021-01-01 00:10:00-06:00 2021-01-01 06:10:00+00:00   \n",
+      "3 2021-01-01 00:15:00-06:00 2021-01-01 06:15:00+00:00   \n",
+      "4 2021-01-01 00:20:00-06:00 2021-01-01 06:20:00+00:00   \n",
+      "\n",
+      "         interval_end_local          interval_end_utc   load  \n",
+      "0 2021-01-01 00:05:00-06:00 2021-01-01 06:05:00+00:00  43714  \n",
+      "1 2021-01-01 00:10:00-06:00 2021-01-01 06:10:00+00:00  43681  \n",
+      "2 2021-01-01 00:15:00-06:00 2021-01-01 06:15:00+00:00  43647  \n",
+      "3 2021-01-01 00:20:00-06:00 2021-01-01 06:20:00+00:00  43614  \n",
+      "4 2021-01-01 00:25:00-06:00 2021-01-01 06:25:00+00:00  43581  \n"
      ]
     }
    ],
@@ -54,7 +92,7 @@
     "    df = client.get_dataset(\n",
     "    dataset=\"ercot_load\",\n",
     "    start=\"2021-1-1\",\n",
-    "    end=\"2021-1-7\",\n",
+    "    end=\"2024-12-31\",\n",
     "    timezone=\"market\",\n",
     "    )\n",
     " \n",
@@ -78,8 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e1a848b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save to csv in clean_data folder\n",
+    "load_actuals_df.to_csv(\"../clean_data/ercot_load_actuals_2021_2024.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37759fbc",
    "metadata": {},
    "outputs": [],
    "source": []
